<resources>
    <string name="app_name">KseG</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="kisan">Kisan</string>
    <string name="atta_buyer">Atta Buyer</string>
    <string name="svg_pause">M6,19h4L10,5L6,5v14zM14,5v14h4L18,5h-4z</string>
    <string name="svg_play">M8,5v14l11,-7z</string>
    <string name="play">Play</string>
    <string name="pause">Pause</string>
    <string name="play_pause">PlayPause</string>
    <string name="videotap_facebook_id">681281865243730</string>
    <string name="facebook_app_id">1175783542535824</string>
    <string name="branch_io_app_id">289362086440489193</string>
    <string name="branch_key">key_live_mhzfmgFdhdEqqmOd2Azt1iegstlb3JUD</string>
    <string name="nav_home">Home</string>
    <string name="drawer_open">Open</string>
    <string name="close">Close</string>
    <string name="drawer_categories">Categories</string>
    <string name="drawer_leaderboard">Leaderboard</string>
    <string name="drawer_genres">Genres</string>
    <string name="drawer_invitefriend">Invite a friend</string>
    <string name="drawer_originals">Originals</string>
    <string name="drawer_search">Search</string>
    <string name="drawer_kids">Kids</string>
    <string name="drawer_setting">Settings</string>
    <string name="drawer_aboutus">About Us</string>
    <string name="drawer_help">Help</string>
    <string-array name="nav_drawer_labels">
        <item>@string/nav_home</item>
        <item>@string/drawer_categories</item>
        <item>@string/drawer_leaderboard</item>
        <item>@string/drawer_genres</item>
        <item>@string/drawer_invitefriend</item>
        <item>@string/drawer_originals</item>
        <item>@string/drawer_search</item>
        <item>@string/drawer_kids</item>
        <item>@string/drawer_setting</item>
        <item>@string/drawer_aboutus</item>
        <item>@string/drawer_help</item>

    </string-array>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="fragmentname">HomeFragment</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="email_id_mobile_number">Email Id/Mobile Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="reset_enter_password">Enter Password</string>
    <string name="reset_enter_confirm_password">Confirm Password</string>
    <string name="old_password">Enter Current Password</string>
    <string name="new_password">Enter New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="reset_submit">SUBMIT</string>
    <string name="subscribe">Subscribe</string>
    <string name="submit">Submit</string>
    <string name="server_cert_asset_name">csr.pem</string>
    <string name="edit">Edit</string>
    <string name="save">Save</string>
    <string name="edit_comment">Edit Comment</string>
    <string name="delete_comment">Delete Comment</string>
    <string name="register">SIGN UP</string>
    <string name="name">Full Name</string>
    <string name="birthday">Date of Birth</string>
    <string name="email">Email ID</string>
    <string name="dob_hint">DD-MM-YYYY</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="explore_as_a_guest">Explore as Guest</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="please_enter_the_one_time">Please enter the One Time Password (OTP)\nthat you just received on your phone or\nclick on the link sent to your\nEmail ID to register with us.</string>
    <string name="please_enter_the_one_time_one_line">Please enter the One Time Password (OTP) that you just received on your phone or click on the link sent to your Email ID to register with us.</string>
    <string name="enter_otp_edit_profile">Please enter the One Time Password (OTP)</string>
    <string name="resent_otp">RESENT OTP</string>
    <string name="please_enter_your_regist">Please enter your registered email id\n or mobile number</string>
    <string name="please_enter_your_regist_no_line">Please enter your registered email id or mobile number</string>
    <string name="please_enter_your_new_password">Please enter your new Password</string>
    <string name="if_you_wish_to_register_via_m">If you wish to register via mobile number, VideoTap will send a one duration SMS to verify your phone number. Mesage and data rates may apply.</string>
    <string name="forgot_password_screen">Forgot Password</string>
    <string name="reset_password">Reset Password</string>
    <string name="otp_sent">Otp has been sent to %1$s mobile number</string>
    <string name="otp_sent_email">Otp has been sent to %1$s Email Id</string>
    <string name="got_it">GOT IT!</string>
    <string name="we_just_sent_you_an_email_with_instructions_to_reset_your_password">We just sent you an email with instructions to reset your password.</string>
    <string name="please_wait">Please wait...</string>
    <string name="registration_successful">Registration Successful</string>
    <string name="android">android</string>
    <string name="no_internet">No Internet Connection</string>
    <string name="internet_connection">Please check your internet connection</string>
    <string name="internet_dis_connected">Internet disconnected</string>
    <string name="internet_connected">Internet connected</string>
    <string name="enter_name">Please enter your name</string>
    <string name="enter_name_3_chars">Name should be at least 3 characters long</string>
    <string name="enter_birthday">Please enter your Date of Birth</string>
    <string name="dob_greater_13">Age should be greater than 13 years</string>
    <string name="enter_email">Please enter your email id</string>
    <string name="enter_mobile">Please enter your mobile number</string>
    <string name="enter_password">Password must be at least 8 characters long</string>
    <string name="enter_confirm_password">Confirm password</string>
    <string name="error_password">Please enter password!</string>
    <string name="new_enter_password">New password must be at least 8 characters long</string>
    <string name="please_confirm_password">Please confirm password</string>
    <string name="check_term">Please check term and condition</string>
    <string name="valid_email">Please enter valid email id</string>
    <string name="valid_mobile">Please enter valid mobile number</string>
    <string name="country_code">Country code is not valid</string>
    <string name="phone_length">Mobile number should be 10 characters long</string>
    <string name="match_new_confirm_password">New password and confirm password are not matched</string>
    <string name="incomplete_otp">Incomplete OTP</string>
    <string name="enter_otp">Please enter OTP</string>
    <string name="time_remaining">" seconds remaining..."</string>
    <string name="one_time_remaining">" second remaining..."</string>
    <string name="min_remaining">Minute remaining...</string>
    <string name="min_and">Minutes and</string>
    <string name="sec_remaining">Seconds remaining....</string>
    <string name="enter_city">Please enter city</string>
    <string name="enter_state">Please enter state</string>
    <string name="enter_address">Please enter address</string>
    <string name="enter_country">Please enter country</string>
    <string name="resent_otp_string">Click on send me again to get OTP again</string>
    <string name="facebook">facebook</string>
    <string name="google">google</string>
    <string name="twitter">twitter</string>
    <string name="yes">Yes</string>
    <string name="delete">Delete</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="sign_up_terms_conditions">I agree to VideoTap Terms &amp; Conditions and Privacy Policy</string>
    <string name="popup_explore_guest_text">Hello, You can enjoy upto <b>10 Videos</b>\nas a Guest. But login to Earn Points\n&amp; Gifts and Enjoy full Video Tap\n Experience.</string>
    <string name="popup_explore_guest_share">Share your Feedback with us.</string>
    <string name="sign_up">Sign Up</string>
    <string name="product_name">Product Name</string>
    <string name="farmer_name">Farmer Name</string>
    <string name="quantity_kg">Quantity in kg</string>
    <string name="quality">Quality</string>
    <string name="market_price">Market Price</string>
    <string name="deal">Deal</string>
</resources>