<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bg_register_vt"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:text="@string/sign_up"
                android:visibility="gone"
                android:textColor="@color/black_87"
                android:textSize="@dimen/text_size_25" />

        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginLeft="@dimen/margin_16"
                android:layout_marginRight="@dimen/margin_16"
                android:gravity="center_horizontal"
                android:orientation="vertical"
                android:paddingLeft="@dimen/margin_8"
                android:paddingRight="@dimen/margin_8">


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/et_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_user"
                        android:hint="@string/product_name"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:maxLength="30"
                        android:textColor="@android:color/background_dark"
                        android:textSize="@dimen/text_size_16" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/tvFarmerName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/etFarmerName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@drawable/ic_user"
                        android:hint="@string/farmer_name"
                        android:imeOptions="actionNext"
                        android:singleLine="true"
                        android:maxLength="30"
                        android:textColor="@android:color/background_dark"
                        android:textSize="@dimen/text_size_16" />
                </android.support.design.widget.TextInputLayout>


                <android.support.design.widget.TextInputLayout
                    android:id="@+id/til_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/margin_5">

                    <AutoCompleteTextView
                        android:id="@+id/et_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:drawableRight="@mipmap/ic_mail"
                        android:hint="@string/quality"
                        android:maxLength="40"
                        android:imeOptions="actionNext"
                        android:inputType="textEmailAddress"
                        android:singleLine="true"
                        android:textColor="@android:color/background_dark"
                        android:textSize="@dimen/text_size_16" />
                </android.support.design.widget.TextInputLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_vertical"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinner"
                        android:layout_width="53dp"
                        android:layout_height="41dp"
                        android:layout_margin="3dp"
                        android:background="@android:color/transparent"
                        android:dropDownWidth="wrap_content"
                        android:visibility="gone"/>

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/til_mobile"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_5">

                        <EditText
                            android:id="@+id/et_mobile"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:digits="0123456789+-() "

                            android:drawableRight="@mipmap/ic_mail"
                            android:hint="@string/market_price"
                            android:imeOptions="actionNext"
                            android:inputType="number"
                            android:singleLine="true"
                            android:textColor="@android:color/background_dark"
                            android:textSize="@dimen/text_size_16" />

                    </android.support.design.widget.TextInputLayout>
                </LinearLayout>


                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <android.support.design.widget.TextInputLayout
                        android:id="@+id/textInputNewPassword"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="@dimen/margin_5"
                        app:errorEnabled="false">

                        <EditText
                            android:id="@+id/et_password"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/quantity_kg"
                            android:imeOptions="actionNext"
                            android:inputType="textPassword"
                            android:maxLength="16"
                            android:singleLine="true"
                            android:textColor="@android:color/background_dark"
                            android:textSize="@dimen/text_size_16" />
                    </android.support.design.widget.TextInputLayout>


                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_centerVertical="true">

                        <ImageView
                            android:id="@+id/ivShowPassword"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:layout_marginTop="@dimen/margin_12"
                            android:padding="@dimen/margin_5"
                            app:srcCompat="@mipmap/ic_mail" />
                    </LinearLayout>
                </RelativeLayout>

                <Button
                    android:id="@+id/bt_signup"
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:layout_margin="@dimen/margin_24"
                    android:background="@drawable/sign_up_button_bg"
                    android:text="@string/deal"
                    android:textAllCaps="true"
                    android:textColor="@android:color/white"
                    android:textSize="@dimen/text_size_16"
                    android:textStyle="bold" />
            </LinearLayout>
        </ScrollView>
    </LinearLayout>
    <FrameLayout
        android:id="@+id/frameLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:visibility="gone"/>

</RelativeLayout>